# CShell

./: .clang-format  .clang-format_bck  .gitignore  CMakeLists.txt  EXPERIMENT.cpp  LICENSE  NEWW.cpp  README.md  TEST123.cpp  TODOList.txt  TODOList0.txt  TODOList3.txt  VERYLONGFILE.c  array_view.h  backupIDK1  cfile.cpp  cfile.h  cfile_backup.cpp  cfile_edited.h  classifier.cpp  classifier.h  classifier_backup.h  classifier_backup0.cpp  classifier_backup1.cpp  classifier_backup2.cpp  classifier_backup2.h  classifier_backup3.h  classifier_backup4.h  classifier_backup5.h  classifier_backup6.h  classifier_backup7.h  classifier_backup8_class.h  classifier_draft0.h  classifier_parse_draft1.h  classifier_with_comments.h  classifier_with_comments0.h  cmake_install.cmake  component.cpp  component.h  contactor.cpp  (+30 more)
.qt_for_python/uic/: display copy.py  display.py
old/: CMakeCache.txt  EXPERIMENT.cpp  NEWW.cpp  TODOList1.txt  TODOList2.txt  backupIDK1  classifier.h  classifier_backup2.h  classifier_backup3.h  classifier_backup4.h  classifier_backup5.h  classifier_backup6.h  classifier_backup8_class.h  classifier_draft0.h  classifier_parse_draft1.h  classifier_with_comments0.h  contactor.cpp  contactor.h  fractions.cpp  misc.cpp  misc.h  painter.h  test  test.cpp  utils.cpp
